(feat): split sidebar-v2 into sub-components

--- a/src/app/modules/channels/channel.component.scss
+++ b/src/app/modules/channels/channel.component.scss
@@ -16,8 +16,9 @@ m-channel {
 
   .m-channel__rightColumn {
     grid-area: side;
-    //padding-left: 59px;
-    //padding-right: 33.3%;
+    padding-left: 56px;
+    padding-right: 33%;
+    margin-top: 25px;
     min-width: 0;
   }
 
