--- a/src/app/modules/channels/sidebar-v2/sidebar-v2.component.html
+++ b/src/app/modules/channels/sidebar-v2/sidebar-v2.component.html
@@ -1,150 +1,46 @@
 <div class="m-channelSidebar__buttons">
-  <button class="m-channelSidebar__message" i18n>
-    <i class="material-icons">sentiment_satisfied_alt</i>
+  <button class="m-channelSidebar__messageButton" i18n>
+    <img [src]="cdnAssetsUrl + 'assets/icons/wire.svg'" />
     <span>Message</span>
   </button>
 
-  <button class="m-channelSidebar__pay" i18n>
-    <i class="material-icons">sentiment_satisfied_alt</i>
+  <button class="m-channelSidebar__payButton" i18n>
+    <img [src]="cdnAssetsUrl + 'assets/icons/wire.svg'" />
     <span>Pay</span>
   </button>
 </div>
 
-<div class="m-channelSidebar__stats">
-  <!--      <a-->
-  <!--        [routerLink]="['/', user.username, 'feed']"-->
-  <!--        class="mdl-tabs__tab mdl-color-text&#45;&#45;blue-grey-500"-->
-  <!--        *ngIf="user.activity_count"-->
-  <!--      >-->
-  <!--        <span i18n="Count of activities@@M__COMMON__FEED_COUNT">Feed</span>-->
-  <!--        <b>{{user.activity_count | number}}</b>-->
-  <!--      </a>-->
-  <a
-    *ngIf="user.supporters_count && session.getLoggedInUser().guid != user.guid"
-  >
-    <span class="m-channelSidebarStats__title" i18n>
-      Followers
-    </span>
-    <span class="m-channelSidebarStats__count">{{
-      user.supporters_count | abbr
-    }}</span>
-  </a>
-  <a
-    [routerLink]="['/', user.username, 'supporters']"
-    *ngIf="user.supporters_count && session.getLoggedInUser().guid == user.guid"
-  >
-    <span class="m-channelSidebarStats__title" i18n>
-      Followers
-    </span>
-    <span class="m-channelSidebarStats__count">{{
-      user.supporters_count | abbr
-    }}</span>
-  </a>
-  <a [routerLink]="['/', user.username, 'subscribers']">
-    <span class="m-channelSidebarStats__title" i18n>
-      Following
-    </span>
-    <span class="m-channelSidebarStats__count">{{
-      user.subscribers_count | abbr
-    }}</span>
-  </a>
-  <a>
-    <span class="m-channelSidebarStats__title" i18n>
-      Views
-    </span>
-    <span class="m-channelSidebarStats__count">{{
-      user.impressions | abbr
-    }}</span>
-  </a>
-</div>
+<m-channelstats [user]="user"></m-channelstats>
 
-<div class="m-channelSidebar__bioFields">
-  <!--      [ngClass]="{'m-channelSidebar__bioFields&#45;&#45;flex': !editing}"-->
-  <!-- City / Location -->
-  <div
-    class="m-channelSidebar__bioField m-channelSidebar__city"
-    [hidden]="editing || !user.city"
-  >
-    <i class="material-icons">location_on</i>
-    <span>{{ user.city }}</span>
-  </div>
+<m-channelbiofields [user]="user" [editing]="editing"></m-channelbiofields>
 
-  <div
-    class="m-channel-bio-editor m-channel-city-editor"
-    *ngIf="editing && isOwner()"
-  >
-    <div class="m-channel-bio-input m-channel-city-input">
-      <i class="material-icons">location_on</i>
-      <input
-        (keyup)="findCity(user.city)"
-        name="city"
-        [(ngModel)]="user.city"
-        class=""
-        placeholder="Enter your city..."
-        i18n-placeholder="@@M__COMMON__ENTER_CITY"
-      />
-    </div>
-    <div
-      class="m-discovery-cities mdl-card m-border"
-      *ngIf="editing && cities.length > 0"
-    >
-      <p i18n="@@M__COMMON__SELECT_CITY">
-        Select your city:
-      </p>
-      <li
-        (click)="setCity(c)"
-        *ngFor="let c of cities"
-        [hidden]="!(c.address.town || c.address.city)"
-      >
-        {{ c.address.town }}{{ c.address.city }}, {{ c.address.state }}
-      </li>
-    </div>
-  </div>
-  <!-- END City / Location -->
+<m-channels--sorted-module
+  title="Images"
+  i18n-title
+  type="images"
+  [channel]="user"
+  [linksTo]="['/', user.username, 'images']"
+  [size]="8"
+  *mIfBrowser
+></m-channels--sorted-module>
 
-  <!--      <div-->
-  <!--        class="m-channelSidebar__bioField"-->
-  <!--        *ngIf="user.tags && !editing"-->
-  <!--      >-->
-  <!--        <div-->
-  <!--          class="m-channelSidebar__bioField__tags-container"-->
-  <!--          [hidden]="editing || !user.tags"-->
-  <!--        >-->
-  <!--          <i class="material-icons">local_offer</i>-->
-  <!--          <span *ngFor="let tag of user.tags">#{{tag}}</span>-->
-  <!--        </div>-->
-  <!--      </div>-->
+<m-channels--sorted-module
+  title="Videos"
+  i18n-title
+  type="videos"
+  [channel]="user"
+  [linksTo]="['/', user.username, 'videos']"
+  [size]="8"
+  *mIfBrowser
+></m-channels--sorted-module>
 
-  <!--      <div-->
-  <!--        class="m-channel-bio-editor m-channel-city-editor"-->
-  <!--        *ngIf="editing && isOwner()"-->
-  <!--      >-->
-  <!--        <div class="m-channel-bio-input">-->
-  <!--          <i class="material-icons">local_offer</i>-->
-  <!--          <m-hashtags-selector-->
-  <!--            #hashtagsSelector-->
-  <!--            [alignLeft]="true"-->
-  <!--            [tags]="user.tags"-->
-  <!--            (tagsChange)="onTagsChange($event)"-->
-  <!--            (tagsAdded)="onTagsAdded($event)"-->
-  <!--            (tagsRemoved)="onTagsRemoved($event)"-->
-  <!--          >-->
-  <!--          </m-hashtags-selector>-->
-  <!--        </div>-->
-  <!--        <div-->
-  <!--          class="mdl-card mdl-shadow&#45;&#45;2dp"-->
-  <!--          style="min-height:0;"-->
-  <!--          *ngIf="errorMessage"-->
-  <!--        >-->
-  <!--          <div class="mdl-card__supporting-text">-->
-  <!--            {{errorMessage}}-->
-  <!--          </div>-->
-  <!--        </div>-->
-  <!--      </div>-->
+<button (click)="changeEditing.emit(true)">toggle editing</button>
 
-  <!--      <m-channel&#45;&#45;social-profiles-->
-  <!--        [user]="user"-->
-  <!--        [editing]="editing && isOwner()"-->
-  <!--        (changed)="setSocialProfile($event)"-->
-  <!--      ></m-channel&#45;&#45;social-profiles>-->
-</div>
+<m-wire-channel
+  *mIfBrowser
+  #wire
+  [(rewards)]="user.wire_rewards"
+  [channel]="user"
+  [editing]="editing"
+  [channelV2Design]="true"
+></m-wire-channel>
