--- a/src/app/modules/channels/sidebar-v2/sidebar-v2.component.scss
+++ b/src/app/modules/channels/sidebar-v2/sidebar-v2.component.scss
@@ -1,6 +1,7 @@
 m-channel__sidebarv2 {
   .m-channelSidebar__buttons {
     display: flex;
+    margin: 7px 0;
 
     button:first-child {
       margin-right: 47px;
@@ -15,64 +16,77 @@ m-channel__sidebarv2 {
       @include m-theme() {
         color: themed($m-black);
       }
-    }
-  }
 
-  .m-channelSidebar__stats {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    a {
-      text-decoration: none;
-      display: flex;
-      flex-direction: column;
-      height: 60px;
-
-      @include m-theme() {
-        color: themed($m-black);
-      }
-
-      span {
-        line-height: 30px;
-
-        &.m-channelSidebarStats__title {
-          font-size: 13px;
-        }
-
-        &.m-channelSidebarStats__count {
-          font-size: 18px;
-        }
+      img {
+        height: 14px;
+        margin-right: 8px;
       }
     }
   }
 
-  .m-channelSidebar__bioFields {
-    //&.m-channelSidebar__bioFields--flex {
-    //  display: flex;
-    //  flex-flow: row wrap;
-    //  align-items: center;
-    //  margin: auto;
-    //  justify-content: center;
-    //}
+  m-channels--sorted-module {
+    background-color: transparent !important;
+    border: 0 !important;
+    margin: 7px 0;
+    max-width: 245px;
 
-    .m-channelSidebar__bioField {
-      @include m-theme() {
-        color: themed($m-black);
-      }
-    }
+    .m-channels--sorted-module__Title {
+      padding: 0;
 
-    .m-channelSidebar__city {
-      i.material-icons {
-        font-size: 22px;
-        line-height: 30px;
-        vertical-align: middle;
-        margin-right: 10px;
-      }
-
-      span {
+      .mdl-card__title-text {
         font-size: 14px;
         line-height: 30px;
+        font-weight: bold;
+        margin-bottom: 9px;
+      }
+    }
+
+    .m-channels--sorted-module__Tiles {
+      > a {
+        height: 45px;
+        width: 45px;
+        flex-grow: 0;
+        flex-shrink: 0;
+        padding: 0;
+        margin-right: 15px;
+        margin-bottom: 15px;
+        box-sizing: content-box;
+
+        &.m-mature-module-thumbnail {
+          i.material-icons {
+            font-size: 2em !important;
+          }
+        }
+      }
+    }
+
+    .m-channels--sorted-module__viewMore {
+      padding: 0 0 16px;
+    }
+  }
+
+  m-wire-channel {
+    .mdl-card {
+      background-color: transparent !important;
+      box-shadow: none !important;
+    }
+    .mdl-card__title {
+      padding: 8px 0;
+    }
+
+    .m-wire-channel--rewards {
+      //padding: 0 16px;
+
+      .m-wire-channel--description {
+        padding: 16px 0;
+      }
+
+      m-wire-channel-table {
+        table {
+          td {
+            padding: 8px 0;
+          }
+        }
       }
     }
   }
