--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -165,5 +165,7 @@
     </ul>
   </nav>
 
-  <ng-template dynamic-host></ng-template>
+  <div class="m-sidebar--groups" *ngIf="session.isLoggedIn()">
+    <ng-template dynamic-host></ng-template>
+  </div>
 </div>
