(fix): display older views correctly

--- a/src/app/controllers/admin/admin.scss
+++ b/src/app/controllers/admin/admin.scss
@@ -1,5 +1,10 @@
 @import 'defaults';
 
+minds-admin {
+  grid-area: content / span 2;
+  min-width: 0;
+}
+
 minds-admin-boosts {
   minds-button-comment {
     display: none !important;
