--- a/src/app/modules/wallet/wallet.component.scss
+++ b/src/app/modules/wallet/wallet.component.scss
@@ -1,5 +1,10 @@
 @import 'defaults';
 
+m-wallet {
+  grid-area: content / span 2;
+  min-width: 0;
+}
+
 .m-wallet--wrapper {
   max-width: 1280px;
   margin: auto;
