--- a/src/app/common/components/date-dropdowns/date-dropdowns.component.scss
+++ b/src/app/common/components/date-dropdowns/date-dropdowns.component.scss
@@ -2,27 +2,32 @@ m-date__dropdowns {
   display: flex;
   justify-content: space-between;
 
-  select {
-    display: inline-block;
-    background-color: #fff;
-    box-sizing: border-box;
-    margin: 0 10px 0 0;
-    padding: 8px 10px;
-    height: 36px;
+  .m-dateDropdowns__selectWrapper {
+    position: relative;
+    overflow: hidden;
     min-width: 80px;
     max-width: 90px;
-
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-    font-size: 16px;
-    line-height: 21px;
-    border-radius: 2px;
+    border-radius: 3px;
+    margin: 0 10px 0 0;
 
     @include m-theme() {
-      color: themed($m-grey-800);
       background-color: themed($m-white);
-      border: 1px solid #e2e2e2;
+      box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
+    }
+
+    &::after {
+      content: '\25bc';
+      font-size: 10px;
+      padding: 10px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      text-align: center;
+      pointer-events: none;
+
+      @include m-theme() {
+        color: themed($m-grey-200);
+      }
     }
 
     // month
@@ -38,6 +43,30 @@ m-date__dropdowns {
     // year
     &:nth-child(3) {
       min-width: 77px;
+    }
+  }
+
+  select {
+    display: inline-block;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 8px 10px;
+    height: 36px;
+    width: 100%;
+
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+    font-size: 16px;
+    line-height: 21px;
+    border-radius: 2px;
+
+    appearance: none;
+
+    @include m-theme() {
+      color: themed($m-grey-800);
+      background-color: themed($m-white);
+      border: 1px solid #e2e2e2;
     }
   }
 }
