--- a/src/app/modules/wallet/v2/settings-tokens/settings-tokens.component.html
+++ b/src/app/modules/wallet/v2/settings-tokens/settings-tokens.component.html
@@ -12,7 +12,7 @@
         <div>
           <img
             class="metamask"
-            [src]="cdn_assets_url + 'assets/ext/metamask.png'"
+            [src]="cdnAssetsUrl + 'assets/ext/metamask.png'"
           />
           <h2>
             MetaMask
