(chore): add ugc to links

--- a/src/app/common/components/rich-embed/rich-embed.html
+++ b/src/app/common/components/rich-embed/rich-embed.html
@@ -9,7 +9,7 @@
     [ngClass]="{ 'm-inline-embed': hasInlineContentLoaded() }"
     (click)="action($event)"
     target="_blank"
-    rel="noopener noreferrer"
+    rel="noopener nofollow ugc"
     *ngIf="src.thumbnail_src || inlineEmbed"
   >
     <div
