--- a/src/app/modules/wallet/v2/rewards-popup/rewards-popup.component.html
+++ b/src/app/modules/wallet/v2/rewards-popup/rewards-popup.component.html
@@ -1,5 +1,5 @@
 <div class="m-walletRewardsPopup">
-  <div *ngIf="inProgress">
+  <div *ngIf="inProgress" class="m-wallet__spinner">
     <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
   </div>
   <div
