--- a/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div class="m-walletSettingsView--hasAccount__leaveMonetization">
+      <!-- <div class="m-walletSettingsView--hasAccount__leaveMonetization">
         <h4>Leave Monetization Program</h4>
         <p>
           For security reasons, you won't be able to rejoin the monetization
@@ -114,7 +114,7 @@
           (click)="showModal = true; modalContent = 'leaveMonetization'"
           >Leave Monetization Program</m-shadowboxSubmitButton
         >
-      </div>
+      </div> -->
     </ng-container>
     <!-- CONFIRMATION MODAL: LEAVE EDIT MODE -------------------- -->
     <m-walletModal
