--- a/src/app/modules/wallet/v2/transactions-table/transactions-table.component.scss
+++ b/src/app/modules/wallet/v2/transactions-table/transactions-table.component.scss
@@ -72,6 +72,11 @@ m-walletTransactionsTable {
       }
     }
   }
+  .m-walletTransactionsTable__typeWrapper {
+    &.containsPopover {
+      cursor: defaut;
+    }
+  }
 
   .m-walletTransactionsTable__avatar {
     border-radius: 100%;
