--- a/src/app/modules/wallet/v2/transactions-tokens/transactions-tokens.component.html
+++ b/src/app/modules/wallet/v2/transactions-tokens/transactions-tokens.component.html
@@ -8,7 +8,7 @@
         Upcoming
       </div>
       <div
-        class="m-walletTransactionsTable__typeWrapper"
+        class="m-walletTransactionsTable__typeWrapper containsPopover"
         (mouseenter)="showRewardsPopup = true"
         (mouseleave)="showRewardsPopup = false"
       >
