--- a/src/app/modules/wallet/v2/chart/chart.component.html
+++ b/src/app/modules/wallet/v2/chart/chart.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!inProgress">
+<ng-container *ngIf="!inProgress && dashboard">
   <m-timespanFilter
     [timespans]="dashboard.timespans"
     [activeTimespanId]="activeTimespan.id"
@@ -12,3 +12,6 @@
     [segments]="activeMetric.visualisation.segments"
   ></m-chartV2>
 </ng-container>
+<div *ngIf="inProgress || !dashboard" class="m-wallet__spinner">
+  <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+</div>
