--- a/src/app/modules/wallet/v2/chart/chart.component.scss
+++ b/src/app/modules/wallet/v2/chart/chart.component.scss
@@ -1,6 +1,9 @@
 m-walletChart {
   m-timespanFilter {
     margin-right: 40px;
+    @media screen and (max-width: $max-mobile) {
+      margin-right: 20px;
+    }
   }
   .m-chartV2__chartContainer {
     margin-top: 16px;
