fix scroll to cash settings

--- a/src/app/modules/wallet/v2/balance-cash/balance-cash.component.html
+++ b/src/app/modules/wallet/v2/balance-cash/balance-cash.component.html
@@ -1,6 +1,6 @@
 <div class="m-walletBalance--cash" *ngIf="!inProgress">
   <div class="m-walletBalance---cash__onboardingNotice">
-    <p (click)="scrollToCashSettings.emit()">
+    <p (click)="scrollToSettings()">
       <a>Add your bank information</a>
     </p>
     <p>Start receiving cash payouts by adding your bank details.</p>
