(fix): revert sloppy change to topbar

--- a/src/app/common/layout/v2-topbar/v2-topbar.component.scss
+++ b/src/app/common/layout/v2-topbar/v2-topbar.component.scss
@@ -135,11 +135,15 @@
   justify-content: space-between;
   width: 100%;
   height: 52px;
-  max-width: 1084px;
+  max-width: 1296px;
   margin: 0 auto;
-  padding: 15px 0 15px;
+  padding: 0 8px;
   //padding-right: 46px;
   box-sizing: border-box;
+
+  @media screen and (min-width: 1296px) {
+    padding: 0 46px 0 0;
+  }
 
   @media screen and (max-width: 480px) {
     .m-v2-topbarNav__RouterNav {
@@ -293,7 +297,6 @@
   }
 
   > a {
-    margin-right: 40px;
     text-decoration: none;
     height: 32px;
     border-radius: 18px;
